# train-scheduler

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
scheduler/: types.py
scheduler/domain/: enums.py  errors.py
scheduler/domain/commands/: approve_delay_command.py  dispatch_train_command.py  report_delay_command.py  schedule_train_command.py  update_train_status_command.py
scheduler/domain/common/: assertion_concern.py  concurrency_safe_entity.py  entity.py  event_sourced_root_entity.py  identified_domain_object.py  identified_value_object.py
scheduler/domain/common/identity/: __init__.py  protocol.py  uuid.py
scheduler/domain/events/: delay_reported_event.py  train_arrived_event.py  train_booked_event.py  train_departed_event.py
scheduler/domain/schedule/: constants.py  delay_report.py  entites.py  enums.py  ride.py  services.py  train.py  train_model.py
scheduler/domain/schedule/commands/: __init__.py  approve_delay_command.py  dispatch_train_command.py  report_delay_command.py  schedule_ride_command.py  schedule_train_command.py  update_ride_status_command.py  update_train_status_command.py
scheduler/domain/schedule/events/: __init__.py  delay_approved_event.py  delay_reported_event.py  ride_scheduled_event.py  ride_status_changed_event.py  train_arrived_event.py  train_booked_event.py  (+1 more)
tests/: conftest.py
tests/test_unit/: test_approved_delay.py  test_concurrency_safe_entity.py  test_dispatch_train.py  test_entity.py  test_identified_value_object.py  test_report_delay.py  test_schedule_ride.py  test_update_ride_status.py
