[tool.poetry]
name = "scheduler"
version = "0.0.1"
description = ""
authors = ["Murad Akhundov <akhundov1murad@gmail.com>", "Rustam Guliyev <rustam24052003@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
diator = {extras = ["azure"], version = "^0.1.0"}
blacksheep = "^1.2.12"
sqlalchemy = "^2.0.9"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
isort = "^5.12.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
